frame/support/test/tests/pallet_ui/step_020.stderr
error: Invalid pallet struct: expect `Pallet<T>` or `Pallet<T, I>`
  --> $DIR/step_020.rs:15:18
   |
15 |     impl<T: Config> Foo {}
   |                     ^^^

error: expected `Pallet`
  --> $DIR/step_020.rs:15:18
   |
15 |     impl<T: Config> Foo {}
   |                     ^^^
